@@ -44,42 +44,44 @@ auto black_scholes_option_price(const Price& S,
 //' This example illustrate how to use automatic differentiation to
 //' calculate the delte of a Black-Scholes call and put. It is based
 //' on the same example in the FastAD sources.
-//' @return No value is returned as the function prints to stdout
+//' @return A matrix with rows for the call and put variant, and columns
+//' for option value, delta and vega
 //' @examples
 //' black_scholes_example()
 // [[Rcpp::export]]
-void black_scholes_example() {
-    double K = 100.0;
-    double tau = 30.0 / 365;
-    double r = 1.25 / 100;   
-    ad::Var<double> sigma(5);
-    ad::Var<double> S(105);
+Rcpp::NumericMatrix black_scholes(double spot = 105,   		// current spot
+                                  double strike = 100, 		// strike
+                                  double vol = 5,               // annual vol (500% !!)
+                                  double r = 1.25 / 100,        // short-term rate
+                                  double tau = 30.0 / 365) {	// time remaining
+    ad::Var<double> Spot(spot);
+    ad::Var<double> Vol(vol);
     std::vector<ad::Var<double>> cache;
 
-    auto call_expr = (black_scholes_option_price<option_type::call>(S, K, sigma, tau, r, cache));
+    Rcpp::NumericMatrix M(2,3);
+    Rcpp::rownames(M) = Rcpp::CharacterVector::create("call", "put");
+    Rcpp::colnames(M) = Rcpp::CharacterVector::create("value", "delta", "vega");
+
+    auto call_expr = (black_scholes_option_price<option_type::call>(Spot, strike, Vol, tau, r, cache));
     auto size_pack_c = call_expr.bind_cache_size();
     std::vector<double> del_buf_c(size_pack_c(0));
     std::vector<double> veg_buf_c(size_pack_c(1));
     call_expr.bind_cache({del_buf_c.data(), veg_buf_c.data()});
     double call_price = ad::autodiff(call_expr);
-
-    Rcpp::Rcout << "Call Price: " << call_price << std::endl;
-    Rcpp::Rcout << "Delta:      " << S.get_adj() << std::endl;
-    Rcpp::Rcout << "Vega:       " << sigma.get_adj() << std::endl;
+    M.row(0) = Rcpp::NumericVector::create(call_price, Spot.get_adj(), Vol.get_adj());
 
     // reset adjoints before differentiating again
-    S.reset_adj();
-    sigma.reset_adj();
+    Spot.reset_adj();
+    Vol.reset_adj();
     for (auto& c : cache) c.reset_adj();
 
-    auto put_expr = (black_scholes_option_price<option_type::put>(S, K, sigma, tau, r, cache));
+    auto put_expr = (black_scholes_option_price<option_type::put>(Spot, strike, Vol, tau, r, cache));
     auto size_pack_p = put_expr.bind_cache_size();
     std::vector<double> del_buf_p(size_pack_p(0));
     std::vector<double> veg_buf_p(size_pack_p(1));
     put_expr.bind_cache({del_buf_p.data(), veg_buf_p.data()});
     double put_price = ad::autodiff(put_expr);
+    M.row(1) = Rcpp::NumericVector::create(put_price, Spot.get_adj(), Vol.get_adj());
 
-    Rcpp::Rcout << "Put Price:  " << put_price << std::endl;
-    Rcpp::Rcout << "Delta:      " << S.get_adj() << std::endl;
-    Rcpp::Rcout << "Vega:       " << sigma.get_adj() << std::endl;
+    return(M);
 }
